changed to be Service/Bean